--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,5 @@
 # folder ignore
-.idea//*
-psd-photoshop//*
-
-# dist//* закомител для того чтобы отобразить сайт на github
-
-rezerv//*
-.vscode//*
-task//*
-# files ignore
-*.iml
-*.xml
-*.psd
-lint.yml
-
+.idea
 .DS_Store
 node_modules
 package-lock.json
